--- a/src/main/resources/db/liquibase.properties
+++ b/src/main/resources/db/liquibase.properties
@@ -1,7 +1,4 @@
-rabbit.interval_s=5
-rabbit.thread.sleep_s=10
-
-# db
+changeLogFile=src/main/resources/db/dbchangelog.xml
 url=jdbc:postgresql://localhost:5432/alert_rabbit_db
 username=postgres
 password=postgres
