--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,12 @@
 app.startup.period=60
-app.sites.url=https://career.habr.com/vacancies/java_developer
+
+# database source
+changeLogFile=src/main/resources/db/dbchangelog.xml
+url=jdbc:postgresql://localhost:5432/alert_rabbit_db
+username=postgres
+password=postgres
+driver-class-name=org.postgresql.Driver
+
+# scheduler
+rabbit.startup.interval_s=5
+# rabbit.thread.sleep_s=10
