--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,6 @@
 app.startup.period=60
+app.port=9000
+app.charset=Windows-1251
 
 # database source
 changeLogFile=src/main/resources/db/dbchangelog.xml
